--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ add_executable(${PROJECT_NAME} "" main.c main.h fantome.c fantome.h pacman.h map
 target_sources(${PROJECT_NAME} PRIVATE pacman.c)
 target_include_directories(${PROJECT_NAME} PRIVATE ${SDL2_INCLUDE_DIRS})
 target_compile_definitions(${PROJECT_NAME} PRIVATE "SDL_MAIN_HANDLED")
-target_link_libraries(${PROJECT_NAME} PRIVATE ${SDL2_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} PRIVATE ${SDL2_LIBRARIES} m)
 
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/pacman_sprites.bmp
     DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
